fixed scrollbars

--- a/public/stylus/content.styl
+++ b/public/stylus/content.styl
@@ -1,5 +1,5 @@
 .content
-	overflow scroll
+	overflow auto
 	
 pre
 	font-weight 600
